# backend/src/main/java/com/land/LandManagement/controllers/BuyRequestController.java
@@ -3,8 +3,11 @@ package com.land.LandManagement.controllers;
 import com.land.LandManagement.domain.tables.BuyRequest;
 import com.land.LandManagement.mappers.BuyRequestMapper;
 import com.land.LandManagement.services.BuyRequestService;
+import com.land.LandManagement.services.LandService;
+import com.land.LandManagement.services.UserService;
 import com.land.backend.api.BuyRequestApi;
 import com.land.backend.dto.BuyRequestDto;
+import org.mapstruct.Context;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -22,10 +25,16 @@ public class BuyRequestController implements BuyRequestApi {
     @Autowired
     BuyRequestService buyRequestService;
 
+    @Autowired
+    LandService landService;
+
+    @Autowired
+    UserService userService;
+
     @Override
     public ResponseEntity<BuyRequestDto> createBuyRequest(BuyRequestDto buyRequestDto)
     {
-        BuyRequest buyRequest = MAPPER.map(buyRequestDto);
+        BuyRequest buyRequest = MAPPER.map(buyRequestDto, userService, landService);
         BuyRequestDto createdRequest = MAPPER.map(buyRequestService.createBuyRequest(buyRequest));
         return new ResponseEntity<>(createdRequest, CREATED);
     }
