# backend/src/main/java/com/land/LandManagement/controllers/UserController.java
@@ -17,8 +17,8 @@ public class UserController implements UserApi {
     UserService userService;
 
     @Override
-    public ResponseEntity<UserDto> getUser(Integer id) {
-        UserDto userDto = MAPPER.map(userService.getUser(id));
+    public ResponseEntity<UserDto> getUserById(Integer id) {
+        UserDto userDto = MAPPER.map(userService.getUserById(id));
         return ResponseEntity.ok(userDto);
     }
 
