# backend/src/main/java/com/land/LandManagement/mappers/BuyRequestMapper.java
@@ -1,8 +1,12 @@
 package com.land.LandManagement.mappers;
 
 import com.land.LandManagement.domain.tables.BuyRequest;
+import com.land.LandManagement.services.LandService;
+import com.land.LandManagement.services.UserService;
 import com.land.backend.dto.BuyRequestDto;
+import org.mapstruct.Context;
 import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
 import org.mapstruct.factory.Mappers;
 
 import java.util.List;
@@ -11,9 +15,19 @@ import java.util.List;
 public interface BuyRequestMapper {
     BuyRequestMapper MAPPER = Mappers.getMapper(BuyRequestMapper.class);
 
-    BuyRequestDto map(BuyRequest domain);
-    BuyRequest map(BuyRequestDto dto);
 
-    List<BuyRequest> toDomain(List<BuyRequestDto> dto);
-    List<BuyRequestDto> toDto(List<BuyRequest> domain);
+    @Mapping(target = "buyerId", expression = "java(entity.getBuyer().getId())")
+    @Mapping(target = "sellerId", expression = "java(entity.getSeller().getId())")
+    @Mapping(target = "landId", expression = "java(entity.getLand().getId())")
+    BuyRequestDto map(BuyRequest entity);
+
+    //expression = "java(userService.getUserById(dto.getBuyerId()))"
+    //expression = "java(userService.getUserById(dto.getSellerId()))"
+    @Mapping(target = "buyer", ignore = true)
+    @Mapping(target = "seller", ignore = true)
+    @Mapping(target = "land", expression = "java(landService.getLandById(dto.getLandId()))")
+    BuyRequest map(BuyRequestDto dto, @Context UserService userService, @Context LandService landService);
+
+    List<BuyRequest> toDomain(List<BuyRequestDto> dto, @Context UserService userService, @Context LandService landService);
+    List<BuyRequestDto> toDto(List<BuyRequest> entity);
 }
